# rust-http-server

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
ci/: before_deploy.sh
pkg/brew/: rust-http-server.rb
src/: cli.rs  config.rs  main.rs  request.rs  response.rs  routing.rs  server.rs  threadpool.rs  utils.rs
src/wsgi/: application.rs  bindings.py
src/wsgi/test_scripts/: failure.py
